--- a/src/components/input/inputSearch.scss
+++ b/src/components/input/inputSearch.scss
@@ -1,18 +1,19 @@
 .cont-input {
   display: flex;
-  gap: 2px;
+  gap: 5px;
 }
 .input-search {
-  height: 2rem;
+  height: 2.5rem;
   border-radius: 5px;
   border: 0;
   padding: 4px;
 }
 .button {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 204);
   border: 0;
   width: 2rem;
   border-radius: 4px;
+  border: 1px solid #fff;
 }
 .button ion-icon {
   color: rgb(255, 255, 255);
