--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -34,3 +34,12 @@
 .number {
   width: 1.5rem;
 }
+.custom-loader {
+  width:5rem;
+  height:5rem;
+  border-radius:50%;
+  background:conic-gradient(#0000 10%,#766DF4);
+  -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation:s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
